k8s/database.yaml
# ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app-service: database
  ports:
    - protocol: TCP 
      port: 5432
      targetPort: postgres-port

---

# Headless Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports: 
    - port: 5432
      name: postgres-port
  clusterIP: None

---

# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector: 
    matchLabels:
      app: postgres-pod
  serviceName: postgres-service
  replicas: 1 
  # Use default StorageClass
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: postgres-pod
        app-service: database
    spec:
      volumes:
        - name: postgres-startup-script 
          configMap:
            name: postgres-config
      containers: 
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
              # Storage to persist database records
            - name: postgres-storage
              mountPath: /data
              # Mount startup script
            - name: postgres-startup-script
              mountPath: /docker-entrypoint-initdb.d
