k8s/service.yaml
# NodePort: For External Access
apiVersion: v1
kind: Service
metadata:
  name: frontend-access
spec:
  selector:
    external-access: external-access
  type: NodePort
  ports:
    - protocol: TCP 
      nodePort: 30005
      port: 80
      targetPort: 5000
  
---

# ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec: 
  selector:
    app-service: backend
  ports:
    - protocol: TCP 
      port: 81
      targetPort: 5000
  

---

# ClusterIP Service
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app-service: database
  ports:
    - protocol: TCP 
      port: 5432
      targetPort: postgres-port

---

# Headless Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  ports: 
    - port: 5432
      name: postgres-port
  clusterIP: None
